# asteroid-2fa

./: CMakeLists.txt  README.md  TextBox.qml  asteroid-authenticator.desktop.template  asteroid-authenticator.pro  crypt.cpp  crypt.h  database.json  main.cpp  main.qml  qrcode.cpp  qrcode.h  vault.cpp  vault.h
libcppotp/: otp.cpp
qrcode/: qrcodegen.cpp
src/: CMakeLists.txt  crypt.cpp  main.cpp  main.qml  qrcode.cpp  qrcode.h  resources.qrc  twofactor.cpp  twofactor.h  vault.cpp
